manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: front
spec:
    replicas: 2
    selector:
       matchLabels:
          app: front-app
    template:
       metadata:
          labels:
             app: front-app
       spec:
          containers:
          - name: front-react
            image: aitakynsultan/task1front:v2
            ports:
              - name: front-react
                containerPort: 3000
            command: ["npm", "start"]
