manifests/serviceBack.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
